// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ButtonOLD Button 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={[Function]}
        type="button"
        value="Save as draft"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={true}
        id={null}
        onClick={[Function]}
        type="button"
        value="Delete"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="warning"
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Link 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <a
        className="button"
        href="#"
        id={null}
      >
        Continue
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Secondary 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="secondary"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Save as draft"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Standard 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={null}
        type="button"
        value="Save as draft"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Start 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <a
        className="button start"
        href="#"
        id={null}
      >
        Start now &gt;
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Save and continue"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <input
        className="warning"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </div>
  </div>
</div>
`;
